Add success popup on save, fix React Router warnings, improve CORS error handling

--- a/firebase.json
+++ b/firebase.json
@@ -35,6 +35,9 @@
   },
   "firestore": {
     "rules": "firebase/firestore.rules"
+  },
+  "storage": {
+    "rules": "firebase/storage.rules"
   }
 }
 
