--- a/.github/workflows/build-and-host.yml
+++ b/.github/workflows/build-and-host.yml
@@ -4,9 +4,13 @@ on:
   push:
     branches:
       - main
+      - clean-merge
+      - clean-merge-sync
   pull_request:
     branches:
       - main
+      - clean-merge
+      - clean-merge-sync
 
 jobs:
   build-and-deploy:
