--- a/.github/workflows/build-and-host.yml
+++ b/.github/workflows/build-and-host.yml
@@ -53,7 +53,7 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Deploy to Firebase Hosting
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/clean-merge' || github.ref == 'refs/heads/clean-merge-sync') && github.event_name == 'push'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
