Fix date handling errors, remove manifest icon, and remove preload warnings

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,13 +6,6 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0ea5e9",
-  "icons": [
-    {
-      "src": "/favicon.svg",
-      "sizes": "any",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
-    }
-  ]
+  "icons": []
 }
 
